# LQBot

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  launch.py  poe_tasks.toml  pyproject.toml  ruff.toml  semantic.toml
.github/workflows/: main-ci.yaml
asset/other/: imgkit.css
config_example/: command.yaml  config.yaml  ex_config.yaml
config_example/prompts/: bot_chatter.yaml
configs/: ex_config.yaml
configs/jm/: option.yml
configs/llm/: bot_chatter.yaml  bot_toolbox.yaml  relation_extractor.yaml
configs/prompts/: bot_chatter.yaml
plugins/GroupBotPlugin/: __init__.py  main.py
plugins/SchedulePlugin/: __init__.py  main.py
prompts/: chit_chat_prompt.yaml  vector_query_prompt.yaml
scripts/: create_db.sh  docker_run.sh  launch.sh
src/lqbot/: base.py
src/lqbot/conn/vector/: base.py  entity_relation.py
src/lqbot/core/agent/: agent.py  base.py
src/lqbot/core/robot/: bot.py  trigger.py
src/lqbot/utils/: config.py  decorator.py  logger.py  models.py  util.py
src/qq_bot/: __init__.py  base.py  main.py
src/qq_bot/alembic/: 62c8f0fbfb56_generate_uesr_db.py  env.py
src/qq_bot/basekit/: config.py  decorator.py  logging.py  models.py  util.py
src/qq_bot/common/: config.py  logging.py  util.py
src/qq_bot/conn/minio/: base.py
src/qq_bot/conn/sql/: models.py  service.py  session.py
src/qq_bot/conn/vector/: base.py  entity_relation.py
src/qq_bot/core/: __init__.py
src/qq_bot/core/agent/: agent.py  agent_command.py  agent_server.py  base.py
src/qq_bot/core/components/: command.py  news.py  toolbox.py  wallpaper.py
src/qq_bot/core/llm/: base.py  memory.py  registrar.py  voice.py
src/qq_bot/core/llm_manager/: llm_registrar.py
src/qq_bot/core/res_manager/: command_provider.py  jm_capturer.py  jm_provider.py  news_capturer.py  news_provider.py  (+2 more)
src/qq_bot/utils/: config.py  decorator.py  logger.py  logging.py  models.py  util.py  util_text.py
tests/: conftest.py
tests/api/: test_eventgpt.py  test_user.py
(+80 files in other folders)
